# remeshing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  MeshUtils.cpp  MeshUtils.h  VariationalRemeshing.cpp  VariationalRemeshing.h  main.cpp
src/backup/: BVHTriangle.cpp  BVHTriangle.h
